--- a/assets/js/i18n/ge.json
+++ b/assets/js/i18n/ge.json
@@ -1,7 +1,8 @@
 {
 	"common": {
 		"siteName": "Dentiluri",
-		"phone": "(555) 123-4567",
+		"phone": "032 2 060 786",
+		"phone2": "555 602 500",
 		"bookAppointment": "ვიზიტის დაჯავშნა",
 		"learnMore": "მეტის გაგება",
 		"contactUs": "დაგვიკავშირდით"
@@ -113,16 +114,16 @@
 			"subtitle": "გაქვთ შეკითხვები ან მზად ხართ დასაჯავშნად? დაუკავშირდით ჩვენს მეგობრულ გუნდს.",
 			"location": {
 				"title": "მდებარეობა",
-				"address": "123 Dental Way, Cityville, ST 12345"
+				"address": "ვარკეთილის ზემო პლატო II მიკრო/რაიონი, კორპუსი 25"
 			},
 			"phone": {
 				"title": "ტელეფონი"
 			},
 			"hours": {
 				"title": "სამუშაო საათები",
-				"weekdays": "ორშაბათი-პარასკევი: 8:00-18:00",
-				"saturday": "შაბათი: 9:00-14:00 (შერჩეულ თარიღებში)",
-				"sunday": "კვირა: დასვენება"
+				"weekdays": "ორშაბათი-პარასკევი: 10:00 - 19:00",
+				"saturday": "შაბათი: 10:00 - 19:00",
+				"sunday": "კვირა: 10:00 - 17:00"
 			},
 			"form": {
 				"firstName": "სახელი",
@@ -262,30 +263,31 @@
 			"subtitle": "გაქვთ შეკითხვები ან მზად ხართ დასაგეგმად? დაუკავშირდით ჩვენს მეგობრულ გუნდს.",
 			"location": {
 				"title": "მდებარეობა",
-				"address": "123 Dental Way, Cityville, ST 12345",
-				"detail": "მოხერხებულად მდებარეობს Cityville-ის ცენტრში, საკმარისი პარკირებით."
+				"address": "ვარკეთილის ზემო პლატო II მიკრო/რაიონი, კორპუსი 25",
+				"detail": "მოხერხებულად მდებარეობს რომანოზ ხომლელის ქუჩაზე, საკმარისი პარკირებით."
 			},
 			"phone": {
 				"title": "ტელეფონი",
-				"number": "(555) 123-4567",
+				"number": "032 2 060 786",
+				"number2": "555 602 500",
 				"detail": "დაგვირეკეთ სამუშაო საათებში ჩვენს გუნდთან სასაუბროდ."
 			},
 			"email": {
 				"title": "ელ-ფოსტა",
-				"address": "info@Dentiluri.com",
+				"address": "info@Dentiluri.ge",
 				"detail": "ჩვენ ვუპასუხებთ თქვენს ელფოსტას 24 სამუშაო საათის განმავლობაში."
 			}
 		},
 		"hours": {
 			"title": "სამუშაო საათები",
 			"weekdays": "ორშაბათი - ხუთშაბათი",
-			"weekdayHours": "8:00 - 18:00",
+			"weekdayHours": "10:00 - 19:00",
 			"friday": "პარასკევი",
-			"fridayHours": "8:00 - 17:00",
+			"fridayHours": "10:00 - 19:00",
 			"saturday": "შაბათი",
-			"saturdayHours": "9:00 - 14:00 (შერჩეულ თარიღებში)",
+			"saturdayHours": "10:00 - 19:00",
 			"sunday": "კვირა",
-			"sundayHours": "დასვენება"
+			"sundayHours": "10:00 - 17:00"
 		},
 		"social": {
 			"title": "გამოგვყევით",
@@ -307,7 +309,7 @@
 		},
 		"map": {
 			"title": "გვიპოვნეთ",
-			"subtitle": "ჩვენ მოხერხებულად ვმდებარეობთ Cityville-ის ცენტრში."
+			"subtitle": "ჩვენი ადგილმდებარეობა რომანოზ ხომლელის ქუჩაზეა"
 		}
 	}
 }
